--- a/publicdemo/pytest.ini
+++ b/publicdemo/pytest.ini
@@ -4,7 +4,7 @@
 # -m smoke
 # -m user_manager
 # -m "user_manager or smoke"
-addopts = -vs
+addopts = -vs -m smoke
 # 配置执行的用例位置
 testpaths = ./encapsulation
 # 配置修改默认的模块规则
