addopts get html report

--- a/publicdemo/pytest.ini
+++ b/publicdemo/pytest.ini
@@ -4,9 +4,9 @@
 # -m smoke
 # -m user_manager
 # -m "user_manager or smoke"
-addopts = -vs
+addopts = -vs --html=./reports/report.html
 # 配置执行的用例位置
-testpaths = ./encapsulation
+testpaths = ./testcases
 # 配置修改默认的模块规则
 python_files = test_*.py
 # 配置修改默认的类规则
