--- a/publicdemo/pytest.ini
+++ b/publicdemo/pytest.ini
@@ -4,9 +4,9 @@
 # -m smoke
 # -m user_manager
 # -m "user_manager or smoke"
-addopts = -vs --html=./reports/report.html
+addopts = -vs --alluredir=./temps --clean-alluredir
 # 配置执行的用例位置
-testpaths = ./testcases
+testpaths = ./testcases/dk_manage
 # 配置修改默认的模块规则
 python_files = test_*.py
 # 配置修改默认的类规则
